Continuação da construção do API
